# tools_main

./: .gitignore  20260303_111824_1772504304914.json  README.md  pyproject.toml  requirements.txt  run_serial_text_chat.bat  run_serial_text_chat.sh  serial_text_chat.py  낮침입.json  낮침입_debug.json  낮침입_run_log.txt
isac_labelr/: __init__.py  __main__.py  commands.py  logger.py  models.py  settings.py  timezone_utils.py
isac_labelr/analysis/: engine.py  worker.py
isac_labelr/io/: __init__.py  metadata_writer.py  video_stream.py
isac_labelr/monitor/: memory.py
isac_labelr/ui/: main_window.py  video_canvas.py
isac_labelr/vision/: __init__.py  detector.py  ocr.py  tracker.py
scripts/: build_macos.sh  build_windows.cmd  build_windows.ps1  download_default_model.py  setup_run_macos.sh  setup_run_ubuntu.sh  setup_run_windows.cmd  setup_run_windows.ps1
tests/: test_analysis_worker.py  test_engine_presence.py  test_metadata_store.py  test_models.py  test_tracker.py  test_video_stream.py
